# offlinesearchengine

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  create_appimage.sh  pubspec.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
android/: key.properties.example
android/app/: build.gradle
assets/potion-retrieval-32M/: potion-retrieval-32M_model.safetensors  potion-retrieval-32M_tokenizer.json
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: download_db_functions.dart  main.dart  model2vec_processor.dart  objectbox-model.json  objectbox.g.dart  onnxruntime_functions.dart  oss_licenses.dart  oss_licenses_rust.txt  page_input_dialog.dart  searchtextfunction.dart
lib/handlers/: database_handler.dart  html_file_handler.dart  pdf_file_handler.dart  webpage_from_url_handler.dart
lib/pdf_viewers/: pdfrx_pdf_view.dart  syncfusion_pdf_view.dart
lib/processors/: document_processor.dart  process_file_isolate.dart
lib/screens/: faq_screen.dart  html_viewer_screen.dart  licenses_screen.dart  manage_documents_screen.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/pdf-extract/: Cargo.toml
rust/pdf-extract/src/: lib.rs
rust/rustpotion_local/: Cargo.toml  LICENSE  README.md
rust/rustpotion_local/src/: lib.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: fast_embed.rs  fast_html2md_functions.rs  mod.rs  monolith_functions.rs  ort_functions.rs  pdf_text_extractor.rs  rustpotion.rs  text_splitter.rs  tokenizer.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+30 files in other folders)
