[package]
name = "rust_lib_offline_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
tokenizers = { version = "0.21.0", features = ["http"] }
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
pdf-extract = { path = "pdf-extract" }
text-splitter = { version = "0.22.0", features = ["tokenizers"] }
#pdfium-render = { version = "0.8.27", features = ["sync", "image"], default-features = true }
#rustpotion = "0.3.0"
rustpotion = { path = "rustpotion_local" }
#fastembed = "4.4.0" # Don't delete, works on Android but needs .so for onnx runtime for android
rayon = "1.9.0"
ndarray = "0.16.1"
# Use dynamic loading for all platforms
# ort = { version = "=2.0.0-rc.9", features = ["ndarray", "load-dynamic"] }
fast_html2md = "0.0.47"
html2text = "0.14.0"
monolith = "2.8.3"
readability = "0.3.0"
url = "2.5.0"

