[package]
name = "rustpotion"
version = "0.3.0"
edition = "2021"
authors = ["Greg Taylor gregory.taylor.au@gmail.com"]
description = "Blazingly fast word embeddings with Tokenlearn"
readme = "README.md"
homepage = "https://github.com/Aveygo/rustpotion"
repository = "https://github.com/Aveygo/rustpotion"
license = "MIT"
keywords = ["embeddings", "tokenizer", "rag", "model2vec", "nlp"]

[dependencies]
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = {version="0.12.9", features = ["blocking", "rustls-tls"], default-features = false }
safetensors = "0.4.5"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
